--- a/dicee.html
+++ b/dicee.html
@@ -28,6 +28,17 @@
     </div>
 
 
+    <!-- <p id="demo"></p>
+
+    <script>
+    var w = window.innerWidth;
+    var h = window.innerHeight;
+    
+    var x = document.getElementById("demo");
+    x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
+    </script> -->
+    
+
 
     <script src="index.js"></script>
 
