--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
     <div class="container">
       
-      <h1>Click Button To Play!</h1>
+      <h1 id="my-heading"> </h1>
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="images/dice6.png">
+        <img class="img1 roll" src="images/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="images/dice6.png">
+        <img class="img2 roll" src="images/dice6.png">
       </div>
 
-      <button class="btn-play" onclick="window.location.reload()">One More Round!</button>
+      <button class="btn-play" onclick="playGame()">One More Round!</button>
         
     </div>
 
